vertical alignment helper fake label height fixed

--- a/extensions/css/form.less
+++ b/extensions/css/form.less
@@ -253,8 +253,7 @@ fieldset {
 				content: "\00a0";
 				display: block;
 				font-weight: bold; // vertical dimensions may vary with different weight/style
-				height: 15px;
-				margin-top: -15px; // line-height
+				margin-top: -16px; // negative line-height
 			}
 
 			.rating label {
